[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetree"
version = "1.0.0"
description = "A Python and C++ bindings codebase mapping tool for LLMs"
authors = [
    {name = "Developer"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
keywords = ["llm", "aider", "codebase", "repository-map", "ast", "pagerank"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
codetree = "codetree.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
