[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lucerna"
version = "1.0.0"
description = "A Python and C++ bindings codebase mapping tool for LLMs"
authors = [
    {name = "Holger Kruse"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
keywords = ["llm", "aider", "codebase", "repository-map", "ast", "pagerank"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
savings = [
    "tiktoken>=0.5.0",
]

[project.scripts]
lucerna = "lucerna.cli:main"
lucerna-savings = "lucerna.measure_savings:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
